hard-gists/2778605/run.log
=== Docker Run Log for 2778605 ===
Started at: Mi 29. Okt 13:14:32 CET 2025

[2025-10-29 13:14:32] START: Running container for 2778605
[2025-10-29 13:14:33] SUCCESS: Container a518f6c61b82563b62fd983a67ff58653f2e19995850375641bf0e642140bb21 started for 2778605
=== Container logs for 2778605 ===
  File "/snippet.py", line 18
    raise DeviceNotFound, "No recognised device connected."
                        ^
SyntaxError: invalid syntax
=== End of logs for 2778605 ===
[2025-10-29 13:14:35] INFO: Container a518f6c61b82563b62fd983a67ff58653f2e19995850375641bf0e642140bb21 has stopped
